<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/icon_arrow_back"
            app:title="Login"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/welcome_back"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/login_to_your_account_to_continue"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_phone_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWordUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="end"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/confirmBtm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:padding="11dp"
                android:text="@string/login"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>